[qiuhongyue] finished router and ui

--- a/src/app/home.less
+++ b/src/app/home.less
@@ -1,3 +1,41 @@
 .home {
   color: if((true), red, yellow);
 }
+.content {
+  background-color: #cccccc;
+  padding-top: 60px;
+  height: 360px;
+}
+.item{
+  float: left;
+  width:50%;
+}
+img{
+  width:240px;
+  height:240px;
+}
+.option{
+  font-weight:bold;
+  font-size:1.6em;
+}
+a{
+  color:white;
+}
+a:hover,a:focus,a:active{
+  text-decoration:underline;
+}
+.nav_link{
+  text-decoration: none;
+  font-size: 1em;
+  padding-left: 20px;
+  padding-right: 20px;
+  text-align: right;
+}
+.header{
+  width:100%;
+  background-color: #00bfff;
+  height:60px;
+  line-height:60px;
+  text-decoration: none;
+  padding-left: 30%;
+}
