--- a/src/app/app.less
+++ b/src/app/app.less
@@ -1,3 +1,17 @@
 .app {
   text-align: center;
 }
+.title{
+  //border:1px solid deepskyblue;
+  color:white;
+  text-align: center;
+  width: 100%;
+  height: 480px;
+  line-height: 480px;
+  font-size:5em;
+}
+.main{
+  width:950px;
+  align:center;
+  margin: auto;
+}
