[qiuhongyue] finished the calculator

--- a/src/app/home.less
+++ b/src/app/home.less
@@ -39,3 +39,13 @@ a:hover,a:focus,a:active{
   text-decoration: none;
   padding-left: 30%;
 }
+h1{
+  margin-top:0;
+  padding-top:20px;
+}
+.backHome{
+  color: #535353;
+  font-size:2em;
+  margin-left: -400px;
+  padding-top: 20px;
+}
