--- a/src/app/timer.less
+++ b/src/app/timer.less
@@ -1,3 +1,16 @@
 .timer{
   background-color: #f1f1f1;
+  height:700px;
+}
+.timer_control,.timer_show{
+  width:50%;
+  float:left;
+  height:240px;
+  //border:1px solid black;
+}
+#backHome{
+  margin-left: -1500px;
+  position:relative;
+  top:260px;
+  //border:1px solid black;
 }
